--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Avaleht | Henrik Saega</title>
+    <title>Porfo.io | Henrik Saega</title>
   </head>
   <body>
     <div id="root"></div>
